crates/crucible-tui/src/prompt/snapshots/crucible_tui__prompt__tests__allow_edits@80.snap
---
source: crates/crucible-tui/src/prompt/tests.rs
expression: "dump(&prompt.rows(columns, glyphs), columns)"
---
<Quiet>                                                                  window unknown</>
<Quiet>╭──────────────────────────────────────────────────────────────────────────────╮</>
<Quiet>│</> <Accent>›</>                                                                            <Quiet>│</>
<Quiet>╰──────────────────────────────────────────────────────────────────────────────╯</>
<AllowEdits>allow edits on</><Quiet> (shift+tab to cycle)</>
