crates/crucible-tui/src/prompt/snapshots/crucible_tui__prompt__tests__ask@80.snap
---
source: crates/crucible-tui/src/prompt/tests.rs
expression: "dump(&prompt.rows(columns, glyphs), columns)"
---
<Quiet>                                                                  window unknown</>
<Quiet>╭──────────────────────────────────────────────────────────────────────────────╮</>
<Quiet>│</> <Accent>›</>                                                                            <Quiet>│</>
<Quiet>╰──────────────────────────────────────────────────────────────────────────────╯</>
<Quiet>ask mode on</><Quiet> (shift+tab to cycle)</>
