crates/crucible-tui/src/prompt/snapshots/crucible_tui__prompt__tests__asking@80.snap
---
source: crates/crucible-tui/src/prompt/tests.rs
expression: "dump(&prompt.rows(columns, glyphs), columns)"
---
<Quiet>                                                                  window unknown</>
<Quiet>╭──────────────────────────────────────────────────────────────────────────────╮</>
<Quiet>│</> <Accent>›</>                                                                            <Quiet>│</>
<Quiet>╰──────────────────────────────────────────────────────────────────────────────╯</>
<Accent>ask before edits</><Quiet> (shift+tab to cycle)</>                                           
<Quiet>press ctrl+c again to leave</>
