crates/crucible-tui/src/prompt/snapshots/crucible_tui__prompt__tests__bare@23.snap
---
source: crates/crucible-tui/src/prompt/tests.rs
expression: "dump(&prompt.rows(columns, glyphs), columns)"
---
<Accent>›</> hello                
<Accent>ask bef</><Quiet>  </><Quiet>window unknown</>
