crates/crucible-tui/src/prompt/snapshots/crucible_tui__prompt__tests__full_access@80.snap
---
source: crates/crucible-tui/src/prompt/tests.rs
expression: "dump(&prompt.rows(columns, glyphs), columns)"
---
<FullAccess>╭──────────────────────────────────────────────────────────────────────────────╮</>
<FullAccess>│</> <Accent>›</>                                                                            <FullAccess>│</>
<FullAccess>╰──────────────────────────────────────────────────────────────────────────────╯</>
<FullAccess>full access mode on</><Quiet> (shift+tab to cycle)</>
