crates/crucible-tui/src/prompt/snapshots/crucible_tui__prompt__tests__held_at_the_top@24.snap
---
source: crates/crucible-tui/src/prompt/tests.rs
expression: "dump(&prompt.rows(columns, glyphs), columns)"
---
<Quiet>╭──────────────────────╮</>
<Quiet>│</> <Accent>›</> abcdefghijklmnopqr <Quiet>│</>
<Quiet>│</> <Accent> </> stuvwxyz           <Quiet>│</>
<Quiet>╰──────────────────────╯</>
<Accent>ask before edits</>
