crates/crucible-tui/src/prompt/snapshots/crucible_tui__prompt__tests__scrolled@24.snap
---
source: crates/crucible-tui/src/prompt/tests.rs
expression: "dump(&prompt.rows(columns, glyphs), columns)"
---
<Quiet>╭────── window unknown ╮</>
<Quiet>│</> <Accent>›</> stuvwxyz           <Quiet>│</>
<Quiet>╰──────────────────────╯</>
<Accent>ask before edits</>
