crates/crucible-tui/src/prompt/snapshots/crucible_tui__prompt__tests__short_ascii@30.snap
---
source: crates/crucible-tui/src/prompt/tests.rs
expression: "dump(&prompt.rows(columns, glyphs), columns)"
---
<Quiet>                window unknown</>
<Quiet>+----------------------------+</>
<Quiet>|</> <Accent>></> hello                    <Quiet>|</>
<Quiet>+----------------------------+</>
<Accent>ask before edits</>
